# result

./: CMakeLists.txt  Makefile
cmake/: CompileOptions.cmake  Documentation.cmake  Testing.cmake
docs/: Doxyfile.in
include/result/: coro.h  pipe.h  result.h  tools.h  traits.h  union.h  value_or_error.h
include/result/combine/: and_then.h  combinator.h  lift.h  map.h  map_err.h  or_else.h
include/result/coro/: awaitable.h  promise.h  return_object_holder.h
include/result/detail/: apply_to_template.h  assert.h  constexpr_for.h  helpers.h  min_sized_type.h  overloaded.h  propagate_category.h  propagate_const.h  ref_selector.h  strong_typedef.h  templates.h  type_list.h  unassert.h  visit_result.h  vtable.h  vtables.h
include/result/detail/coro/: awaitable.h  promise.h
include/result/detail/templates/: front.h  impl.h  unit.h
include/result/detail/type_list/: front.h  impl.h  list.h  unit.h
include/voe/: coro.h  tools.h  value_or_error.h
include/voe/detail/: assert.h  constexpr_for.h  helpers.h  propagate_const.h  templates.h  type_list.h  unassert.h  vtables.h
include/voe/detail/coro/: awaitable.h  promise.h  return_object_holder.h
include/voe/detail/templates/: front.h  impl.h  preface.h  unit.h
include/voe/detail/type_list/: front.h  impl.h  unit.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  coro.cpp  remember_op.h  small_tests.cpp  static_tests.cpp  tests.cpp  voe_tools.h
tests/combine/: test_and_then.cpp  test_lift.cpp  test_map.cpp  test_map_err.cpp  test_or_else.cpp
